@@ -1198,7 +1198,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '78';
+$wgStyleVersion = '79';
 
 
 # Server-side caching:
